--- a/tests/test_print.ipynb
+++ b/tests/test_print.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -27,20 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<LegalMoveGenerator at 0x7fa506d71da0 (Nh3, Nf3, Nc3, Na3, h3, g3, f3, e3, d3, c3, b3, a3, h4, g4, f4, e4, d4, c4, b4, a4)>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "board = chess.Board()\n",
     "board.legal_moves"
@@ -48,24 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "r . b q k b . r\n",
-      "p p p p . Q p p\n",
-      ". . n . . n . .\n",
-      ". . . . p . . .\n",
-      ". . B . P . . .\n",
-      ". . . . . . . .\n",
-      "P P P P . P P P\n",
-      "R N B . K . N R\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "board = chess.Board(\"r1bqkb1r/pppp1Qpp/2n2n2/4p3/2B1P3/8/PPPP1PPP/RNB1K1NR b KQkq - 0 4\")\n",
     "print(board)"
@@ -73,38 +47,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pgn = open(\"./game1.pgn\")\n",
+    "pgn = open(\"./test_game.pgn\")\n",
     "import chess.pgn\n",
     "first_game = chess.pgn.read_game(pgn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "first_game.headers[\"Event\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +76,7 @@
     "os.mkdir(tmp_dir)\n",
     "board = first_game.board()\n",
     "counter = 10\n",
-    "for move in first_game.main_line():\n",
+    "for move in first_game.mainline():\n",
     "    fname = tmp_dir + str(counter) + '_file.txt'    \n",
     "    with open(fname, 'w') as f:\n",
     "        print(board, file=f)\n",
@@ -153,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "chess-gif",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +130,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bbbc8612596aea9886ae3a034307263db503890e16d8c899d9f89200bb146b44"
+   }
   }
  },
  "nbformat": 4,
