--- a/tests/test_txt_to_img.ipynb
+++ b/tests/test_txt_to_img.ipynb
@@ -2,55 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from textToImg import text_image"
+    "from text_to_img import text_image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['31_file.txt',\n",
-       " '30_file.txt',\n",
-       " '33_file.txt',\n",
-       " '26_file.txt',\n",
-       " '22_file.txt',\n",
-       " '32_file.txt',\n",
-       " '23_file.txt',\n",
-       " '24_file.txt',\n",
-       " '34_file.txt',\n",
-       " '28_file.txt',\n",
-       " '19_file.txt',\n",
-       " '21_file.txt',\n",
-       " '17_file.txt',\n",
-       " '12_file.txt',\n",
-       " '16_file.txt',\n",
-       " '10_file.txt',\n",
-       " '13_file.txt',\n",
-       " '11_file.txt',\n",
-       " '29_file.txt',\n",
-       " '25_file.txt',\n",
-       " '35_file.txt',\n",
-       " '20_file.txt',\n",
-       " '27_file.txt',\n",
-       " '18_file.txt',\n",
-       " '36_file.txt',\n",
-       " '14_file.txt',\n",
-       " '15_file.txt']"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "files = os.listdir('./.temp/')\n",
@@ -59,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +60,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "chess-gif",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +74,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bbbc8612596aea9886ae3a034307263db503890e16d8c899d9f89200bb146b44"
+   }
   }
  },
  "nbformat": 4,
